# agent-stego

./: .gitignore  README.md  pyproject.toml
analysis/: FINDINGS.md  argument_results.md  capacity_transfer_results.md  coupled_probe_results.md  detectability_scaling_results.md  error_results.md  rerun_2026-05-02_lengthmatch.md  research_directions.md  timing_results.md  volume_results.md  vps_experiment_results.md
experiments/: adversarial_probe.py  adversarial_sweep.py  arms_race.py  arms_race_autonomous.py  bootstrapped_language.py  capability_ladder.py  capacity_and_transfer.py  conversation_detection.py  correction_comparison.py  coupled_probe.py  covert_conversation.py  detectability_scaling.py  detector_demo.py  encryption_ab_test.py  exfiltration_demo.py  exfiltration_multiturn.py  framework_openai_agents.py  latent_bandwidth.py  novel_encodings.py  overnight_3b_sweep.py  permutation_order.py  relay_demo.py  run_baseline.py  run_error.py  run_ordering.py  run_timing.py  run_volume.py  table_correction.py  table_multiturn.py  table_scaling.py  token_detection.py
prompts/: baseline.txt  error_encoder_v1.txt  timing_encoder_v1.txt  volume_encoder_v1.txt
remote/: monitor_stego.sh  run_all_experiments.sh  run_wave3.sh  run_wave4.sh
scripts/: modal_7b_ceiling.py  modal_gpu_experiments.py  modal_table_suite.py
src/: agent.py  client.py  correction.py  harness.py
src/channels/: __init__.py  base.py  error.py  permutation.py  (+4 more)
tests/: test_adversarial.py  test_covert_conversation.py  test_perturbation.py  test_perturbed_channel.py  test_token_stego_fixes.py
(+8 files in other folders)
